hphp/test/slow/attributes/attribute_validate_args.php.expectf

Fatal error: Attribute arguments must be literals in %s/attribute_validate_args.php on line 15
